Scrollbar color fix

--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -214,7 +214,7 @@ h5 {
   box-shadow: none!important;
 }
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #B32128!important;
+  background-color: #333!important;
 }
 
 
